# openwrt-artbern

libhid/patches/: 010-configure.patch  020-debug.patch  020-debugg.patch  030-debug.patch
pavelusb/: Makefile
pavelusb/patches/: 010-Makefile.patch
pavelusb/src/: CMakeLists.txt
usbrelay/: Makefile  config.h
usbrelay/src/: usb_relay.c  wmr_wmr.h
